--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #ff81f4;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #b3008c;
 }
 
 body {
@@ -34,7 +34,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
