--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,11 @@
 
 a {
   font-weight: 500;
-  color: #ff81f4;
+  color: #faebf9;
   text-decoration: inherit;
 }
 a:hover {
-  color: #b3008c;
+  color: #ffffff;
 }
 
 body {
